# diansai_H_car

./: .gitignore  G题_场地区域坐标.md  G题_机车通信接口约定.md  README.md  SR5E1E3_CHASSIS_DEBUG_GUIDE.md  fire_mission_design.md
scripts/: init_start_button_gpio.sh  start_fire_mission.sh  stop_fire_mission.sh  verify_udp_bridges.py
src/: .gitignore
src/bluesea2/src/bluesea-ros2/params/: udp_lidar.yaml
src/car_carto_pkg/: CMakeLists.txt  package.xml
src/car_carto_pkg/configuration_files/: car.lua
src/car_carto_pkg/launch/: car_carto.launch.py
src/car_carto_pkg/urdf/: car.urdf
src/car_launch/: package.xml  setup.cfg  setup.py
src/car_launch/launch/: fire_mission.launch.py  laser_test.launch.py  lidar_test.launch.py
src/fire_video_receiver_pkg/: package.xml  setup.cfg  setup.py
src/fire_video_receiver_pkg/config/: video_receiver.yaml
src/fire_video_receiver_pkg/fire_video_receiver_pkg/: __init__.py  receiver_core.py  video_receiver.py
src/fire_video_receiver_pkg/launch/: video_receiver.launch.py
src/fire_video_receiver_pkg/test/: test_receiver_core.py
src/follower_pkg/: CMakeLists.txt  package.xml
src/follower_pkg/config/: fire_params.yaml  follower_params.yaml
src/follower_pkg/include/follower_pkg/: laser_handshake.hpp
src/follower_pkg/msg/: FireDetection.msg  VisionServoCommand.msg
src/follower_pkg/scripts/: fire_dashboard.py  fire_vision_core.py  fire_vision_node.py
src/follower_pkg/src/: diff_drive_controller.cpp  fire_event_bridge.cpp  fire_link_bridge.cpp  fire_mission_manager.cpp  laser_gpio_driver.cpp  waypoint_test_publisher.cpp
src/follower_pkg/test/: test_fire_vision_core.py  test_laser_handshake.cpp
src/orangepi_to_car/: package.xml  setup.cfg  setup.py
src/orangepi_to_car/car/: __init__.py  orangepi_to_carv2.py
src/orangepi_to_car/launch/: orangepi_to_carv2.launch.py
src/scripts/: chassis_diag.py
